//BAD!!! DON'T START NAMES WITH NEW OR COPY

import "BoosterPackStuff.proto";
import "Item.proto";
import "MonsterStuff.proto";
import "Reward.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "EventBoosterPackProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO



//------------------------------------------------------------------------------------------

message PurchaseBoosterPackRequestProto {
	//the user can only buy one item from a booster pack at a time
	optional MinimumUserProto sender = 1;
	optional int32 boosterPackId = 2;
	optional int64 clientTime = 3;  
	
	//used to implement one free booster pack per day,
	//set to true to make server not charge user
	optional bool dailyFreeBoosterPack = 4;
	
	optional bool buyingInBulk = 5; //cant be true when getting rigged pack
	
	optional int32 gemsSpent = 6;
	optional int32 gachaCreditsChange = 7;
}

message PurchaseBoosterPackResponseProto {
	optional MinimumUserProto sender = 1;
	optional PurchaseBoosterPackStatus status = 2;
	
	//if user received, say, two pieces of a monster
	//and he needs one to complete an existing monster
	//there would be one monster that would be completed
	//and another that would be the remaining pieces of the monster
	
	repeated BoosterItemProto prize = 4;
	
	optional UserRewardProto reward = 6;
	
	enum PurchaseBoosterPackStatus {
		SUCCESS = 1;
		FAIL_INSUFFICIENT_GACHA_CREDITS = 2;
		FAIL_OTHER = 3;
		FAIL_INSUFFICIENT_GEMS  = 4;
	}
}

//------------------------------------------------------------------------------------------

message ReceivedRareBoosterPurchaseResponseProto {
	optional RareBoosterPurchaseProto rareBoosterPurchase = 1;
}

//------------------------------------------------------------------------------------------

